--- a/projects.html
+++ b/projects.html
@@ -18,62 +18,59 @@
             </ul>
         </nav>
     </header>
+
     <section>
         <h1 class="my-creation-title">
-          <span class="moving-symbol left">&lt;&lt;</span> <!-- Moving Left Symbol -->
-          My Creation
-          <span class="moving-symbol right">&gt;&gt;</span> <!-- Moving Right Symbol -->
+            <span class="moving-symbol left">&lt;&lt;</span> <!-- Moving Left Symbol -->
+            My Creations
+            <span class="moving-symbol right">&gt;&gt;</span> <!-- Moving Right Symbol -->
         </h1>
-      </section>
-      
-      
-    <!-- Outer Container with Glassmorphism Effect -->
-    <div class="projects-glass-container">
-        <!-- Projects Section -->
-        <section class="projects-section">
-            <div class="projects-container">
-                <div class="project-item">
-                    <h3>Smart Car</h3>
-                    <p>Description: A smart vehicle system that integrates IoT technology.</p>
-                    <div class="button-container">
-                        <a href="smart-car.html" class="animated-button button-fill-in">View Details</a>
-                    </div>
-                </div>
+    </section>
 
-                <div class="project-item">
-                    <h3>Smartbin</h3>
-                    <p>Description: An intelligent waste management system.</p>
-                    <div class="button-container">
-                        <a href="smartbin.html" class="animated-button button-fill-in">View Details</a>
-                    </div>
+    <!-- Projects Section with Cards -->
+    <section class="projects-section">
+        <div class="projects-container">
+            <div class="card">
+                <div class="card-details">
+                    <h3 class="text-title">Smart Car</h3>
+                    <p class="text-body">A smart vehicle system that integrates IoT technology.</p>
                 </div>
-
-                <div class="project-item">
-                    <h3>Face Recognition and Surveillance Cam</h3>
-                    <p>Description: A security system utilizing facial recognition technology.</p>
-                    <div class="button-container">
-                        <a href="face-recognition.html" class="animated-button button-fill-in">View Details</a>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <h3>Magnion Technology Website</h3>
-                    <p>Description: A responsive website showcasing Magnion technology.</p>
-                    <div class="button-container">
-                        <a href="https://magniontechnologies.co.in/" class="animated-button button-fill-in">View Details</a>
-                    </div>
-                </div>
-
-                <div class="project-item">
-                    <h3>Modern Apex Website</h3>
-                    <p>Description: A modern website design for Apex solutions.</p>
-                    <div class="button-container">
-                        <a href="https://modernapexllc.com/" class="animated-button button-fill-in">View Details</a>
-                    </div>
-                </div>
+                <a href="smart-car.html" class="card-button">View Details</a>
             </div>
-        </section>
-    </div>
+
+            <div class="card">
+                <div class="card-details">
+                    <h3 class="text-title">Smartbin</h3>
+                    <p class="text-body">An intelligent waste management system.</p>
+                </div>
+                <a href="smartbin.html" class="card-button">View Details</a>
+            </div>
+
+            <div class="card">
+                <div class="card-details">
+                    <h3 class="text-title">Face Recognition and Surveillance Cam</h3>
+                    <p class="text-body">A security system utilizing facial recognition technology.</p>
+                </div>
+                <a href="face-recognition.html" class="card-button">View Details</a>
+            </div>
+
+            <div class="card">
+                <div class="card-details">
+                    <h3 class="text-title">Magnion Technology Website</h3>
+                    <p class="text-body">A responsive website showcasing Magnion technology.</p>
+                </div>
+                <a href="https://magniontechnologies.co.in/" class="card-button">View Website</a>
+            </div>
+
+            <div class="card">
+                <div class="card-details">
+                    <h3 class="text-title">Modern Apex Website</h3>
+                    <p class="text-body">A modern website design for Apex solutions.</p>
+                </div>
+                <a href="https://modernapexllc.com/" class="card-button">View Website</a>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
