--- a/skills.html
+++ b/skills.html
@@ -25,6 +25,7 @@
         
         <div class="container">
             <h2>🌐 Programming Languages</h2>
+            <!-- Existing Languages -->
             <div class="skill-box">
                 <span class="title">HTML</span>
                 <div class="skill-bar">
@@ -61,6 +62,23 @@
                 <span class="title">C</span>
                 <div class="skill-bar">
                     <div class="skill-per c">
+                        <span class="tooltip">80%</span>
+                    </div>
+                </div>
+            </div>
+            <!-- New Languages -->
+            <div class="skill-box">
+                <span class="title">C++</span>
+                <div class="skill-bar">
+                    <div class="skill-per cpp">
+                        <span class="tooltip">70%</span>
+                    </div>
+                </div>
+            </div>
+            <div class="skill-box">
+                <span class="title">Go</span>
+                <div class="skill-bar">
+                    <div class="skill-per go">
                         <span class="tooltip">80%</span>
                     </div>
                 </div>
