--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             </div>
             <div class="share">
                 <!-- LinkedIn Icon -->
-                <a href="https://www.linkedin.com/in/vignesh-r-72a3b4255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">
+                <a href="https://www.linkedin.com/in/vigneshrr2206" target="_blank">
                     <img src="link.png" alt="LinkedIn" class="social-icon">
                 </a>
                 <!-- Instagram Icon -->
@@ -41,7 +41,7 @@
                 </a>
                 <!-- Email Icon -->
                 <a href="mailto:vignesh2206rr@gmail.com">
-                    <img src="mail.png" alt="Email" class="social-icon">
+                    <img src="mail.png" alt="gmail" class="social-icon">
                 </a>
                 <!-- GitHub Icon -->
                 <a href="https://github.com/viki2206" target="_blank">
