--- a/smart-car.html
+++ b/smart-car.html
@@ -48,9 +48,9 @@
         <section class="project-gallery">
             <h2>Project Gallery 📸</h2>
             <div class="gallery">
-                <img src="sm1.jpeg" alt="Smart Car Image 1">
-                <img src="sm2.jpeg" alt="Smart Car Image 2">
-                <img src="sm3.jpg" alt="Smart Car Image 3">
+                <img src="smart.PNG" alt="Smart Car Image 1">
+                <img src="smart1.PNG" alt="Smart Car Image 2">
+                <img src="smart2.PNG" alt="Smart Car Image 3">
             </div>
         </section>
 
