--- a/contact.html
+++ b/contact.html
@@ -41,14 +41,17 @@
                 </a>
                 <!-- Email Icon -->
                 <a href="mailto:vignesh2206rr@gmail.com">
-                    <img src="mail.png" alt="gmail" class="social-icon">
+                    <img src="mail.png" alt="Email" class="social-icon">
                 </a>
                 <!-- GitHub Icon -->
                 <a href="https://github.com/viki2206" target="_blank">
                     <img src="git.png" alt="GitHub" class="social-icon">
                 </a>
             </div>
-            <button>Get in Touch</button>
+            <!-- Corrected Get in Touch Button -->
+            <a href="https://wa.me/+918098079175" target="_blank">
+                <button>Get in Touch</button>
+            </a>
         </div>
     </section>
 
