--- a/acheivements.html
+++ b/acheivements.html
@@ -67,9 +67,9 @@
             </ul>
 
             <div class="leadership-images">
-                <img src="leadership1.jpg" alt="Leadership Event 1" class="leadership-image">
-                <img src="leadership2.jpg" alt="Leadership Event 2" class="leadership-image">
-                <img src="leadership3.jpg" alt="Leadership Event 3" class="leadership-image">
+                <img src="lp1.jpg" alt="Leadership Event 1" class="leadership-image">
+                <img src="lp2.jpg" alt="Leadership Event 2" class="leadership-image">
+                <img src="lp3.jpg" alt="Leadership Event 3" class="leadership-image">
             </div>
         </div>
     </section>
