--- a/projects.html
+++ b/projects.html
@@ -19,55 +19,71 @@
         </nav>
     </header>
 
+    <!-- Title Section -->
     <section>
         <h1 class="my-creation-title">
-            <span class="moving-symbol left">&lt;&lt;</span> <!-- Moving Left Symbol -->
+            <span class="moving-symbol left">&lt;&lt;</span>
             My Creations
-            <span class="moving-symbol right">&gt;&gt;</span> <!-- Moving Right Symbol -->
+            <span class="moving-symbol right">&gt;&gt;</span>
         </h1>
     </section>
 
     <!-- Projects Section with Cards -->
     <section class="projects-section">
         <div class="projects-container">
+
+            <!-- Agri Rover (was Smart Car) -->
             <div class="card">
                 <div class="card-details">
-                    <h3 class="text-title">Smart Car</h3>
-                    <p class="text-body">A smart vehicle system that integrates IoT technology.</p>
+                    <h3 class="text-title">Agri Rover </h3>
+                    <p class="text-body">An intelligent agricultural rover for weed removal, disease detection, and smart farm automation using AI and IoT.</p>
                 </div>
                 <a href="smart-car.html" class="card-button">View Details</a>
             </div>
 
+            <!-- Smartbin Project -->
             <div class="card">
                 <div class="card-details">
                     <h3 class="text-title">Smartbin</h3>
-                    <p class="text-body">An intelligent waste management system.</p>
+                    <p class="text-body">An intelligent waste management system for efficient and cleaner cities.</p>
                 </div>
                 <a href="smartbin.html" class="card-button">View Details</a>
             </div>
 
+            <!-- Face Recognition Project -->
             <div class="card">
                 <div class="card-details">
                     <h3 class="text-title">Face Recognition and Surveillance Cam</h3>
-                    <p class="text-body">A security system utilizing facial recognition technology.</p>
+                    <p class="text-body">A facial recognition-based surveillance system for smart security applications.</p>
                 </div>
                 <a href="face-recognition.html" class="card-button">View Details</a>
             </div>
 
+            <!-- Neshmart Project (New) -->
+            <div class="card">
+                <div class="card-details">
+                    <h3 class="text-title">Neshmart 🛍️</h3>
+                    <p class="text-body">A smart e-commerce platform integrating AI-driven recommendations and a seamless shopping experience.</p>
+                </div>
+                <a href="neshmart.html" class="card-button">View Details</a>
+            </div>
+
+            <!-- Magnion Technology Website -->
             <div class="card">
                 <div class="card-details">
                     <h3 class="text-title">Magnion Technology Website</h3>
-                    <p class="text-body">A responsive website showcasing Magnion technology.</p>
+                    <p class="text-body">A professional, responsive website built for Magnion Technologies.</p>
                 </div>
-                <a href="https://magniontechnologies.co.in/" class="card-button">View Website</a>
+                <a href="https://magniontechnologies.co.in/" class="card-button" target="_blank">View Website</a>
             </div>
 
+            <!-- Modern Apex Website -->
             <div class="card">
                 <div class="card-details">
                     <h3 class="text-title">Modern Apex Website</h3>
-                    <p class="text-body">A modern website design for Apex solutions.</p>
+                    <p class="text-body">A modern business website designed for Apex Solutions LLC.</p>
                 </div>
-                <a href="https://modernapexllc.com/" class="card-button">View Website</a>
+                <a href="https://modernapexllc.com/" class="card-button" target="_blank">View Website</a>
             </div>
         </div>
     </section>
@@ -75,7 +91,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2024 Vignesh R | Portfolio</p>
+            <p>&copy; 2025 Vignesh R | Portfolio</p>
         </div>
     </footer>
 </body>
