--- a/skills.html
+++ b/skills.html
@@ -101,6 +101,7 @@
             <p>🛡️ Cybersecurity</p>
             <p>🤖 Machine Learning</p>
             <p>📢 Digital Marketing</p>
+            <p>💾 SQL & MySQL</p>
         </div>
     </div>
     </section>
@@ -140,3 +141,4 @@
     
 </body>
 </html>
+
