--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
             <script>
                 function openResume() {
-                window.open('vignesh_resume.pdf', '_blank');
+                window.open('vignesh resume.pdf', '_blank');
     }
             </script>
        
@@ -38,3 +38,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
