Fix resume link and correct HTML structure
Updated the resume link and ensured HTML structure is correct.

--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,10 @@
     </section>
 
     <!-- Resume Button Section -->
-    <a href="vignesh resume.pdf" target="_blank">
+    <a href="vignesh resume1.pdf" target="_blank">
         <button class="resume-btn">View Resume</button>
     </a>
 </body>
 </html>
+
 
